[package]
name = "deencode"
version = "1.0.3"
edition = "2024"
description = "Reverse engineer encoding errors"
repository = "https://github.com/cigix/deencode"
license = "GPL-3.0-or-later"
keywords = ["encoding", "unicode"]

[dependencies]
encoding_rs = "0.8.35"
mail-parser = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
utf7-imap = "0.3.2"
